--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" data-framework="react">
+<html lang="en" data-framework="amaro">
 	<head>
 		<meta charset="utf-8">
-		<title>React • TodoMVC</title>
+		<title>Amaro • TodoMVC</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 	</head>
@@ -14,19 +14,14 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 
-		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="node_modules/react/dist/react-with-addons.js"></script>
+		<script src="bower_components/amaro/Amaro.js"></script>
 		<script src="node_modules/classnames/index.js"></script>
-		<script src="node_modules/react/dist/JSXTransformer.js"></script>
 		<script src="node_modules/director/build/director.js"></script>
 
 		<script src="js/utils.js"></script>
 		<script src="js/todoModel.js"></script>
-		<!-- jsx is an optional syntactic sugar that transforms methods in React's
-		`render` into an HTML-looking format. Since the two models above are
-		unrelated to React, we didn't need those transforms. -->
-		<script type="text/jsx" src="js/todoItem.jsx"></script>
-		<script type="text/jsx" src="js/footer.jsx"></script>
-		<script type="text/jsx" src="js/app.jsx"></script>
+		<script src="js/todoItem.js"></script>
+		<script src="js/footer.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
