--- a/index.html
+++ b/index.html
@@ -7,7 +7,38 @@
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 	</head>
 	<body>
-		<section class="todoapp"></section>
+		<section class="todoapp">
+			<div>
+				<header className="header">
+					<h1>todos</h1>
+					<input
+						class="new-todo"
+						placeholder="What needs to be done?"
+						autofocus
+						data-out="{
+							value: this.state.newTodo,
+							onkeydown: this.handleNewTodoKeyDown.bind(this),
+							oninput: this.handleChange.bind(this)
+						}"
+					/>
+				</header>
+				<section class="main" data-if="state.model.todos.length">
+					<input
+						class="toggle-all"
+						type="checkbox"
+						data-out="{
+							onchange: this.toggleAll.bind(this),
+							checked: this.activeTodoCount === 0
+						}"
+					/>
+					<ul class="todo-list" data-each="this.shownTodos">
+						{todoItems}
+					</ul>
+				</section>
+
+				{footer}
+			</div>
+		</section>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
 			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
