--- a/index.html
+++ b/index.html
@@ -76,7 +76,52 @@
 					</ul>
 				</section>
 
-				{footer}
+				<footer data-if="state.model.todos.length" class="footer">
+					<span class="todo-count">
+						<strong data-out="{ textContent: this.activeTodoCount }"></strong>
+						<span data-out="{ textContent: this.activeTodoWord }"></span>
+						left
+					</span>
+					<ul class="filters">
+						<li>
+							<a
+								href="#/"
+								data-out="{ className: classNames({
+									selected: state.nowShowing === app.ALL_TODOS
+								}) }"
+							>
+								All
+							</a>
+						</li>
+						<li>
+							<a
+								href="#/active"
+								data-out="{ className: classNames({
+									selected: state.nowShowing === app.ACTIVE_TODOS
+								}) }"
+							>
+								Active
+							</a>
+						</li>
+						<li>
+							<a
+								href="#/completed"
+								data-out="{ className: classNames({
+									selected: state.nowShowing === app.COMPLETED_TODOS
+								}) }"
+							>
+								Completed
+							</a>
+						</li>
+					</ul>
+					<button
+						data-if="this.completedCount > 0"
+						data-out="{ onclick: this.clearCompleted.bind(this) }"
+						class="clear-completed"
+					>
+						Clear completed
+					</button>
+				</footer>
 			</div>
 		</section>
 		<footer class="info">
@@ -92,7 +137,6 @@
 		<script src="js/utils.js"></script>
 		<script src="js/todoModel.js"></script>
 		<script src="js/todoItem.js"></script>
-		<script src="js/footer.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
